force-app/main/default/objects/Web_Product__c/Web_Product__c.object-meta.xml
<CustomObject>
    <label>Web Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>