force-app/main/default/objects/Web_Product__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <length>30</length>
    <type>Text</type>
</CustomField>