force-app/main/default/objects/Web_Product__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>