force-app/main/default/objects/Web_Product__c/fields/Min_Order_Packets__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Packets__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Min Order Packets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>