force-app/main/default/objects/Web_Product__c/fields/MRP_Per_Packet__c.field-meta.xml
<CustomField>
    <fullName>MRP_Per_Packet__c</fullName>
    <description>Printed MRP of one packet. The website strikes this through next to the selling price. Leave blank for no strike-through.</description>
    <inlineHelpText>Printed MRP per packet, e.g. 550. Leave blank if the product has no MRP to show.</inlineHelpText>
    <label>MRP Per Packet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>