force-app/main/default/objects/Web_Product__c/fields/Pack_Label__c.field-meta.xml
<CustomField>
    <fullName>Pack_Label__c</fullName>
    <label>Pack Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>