force-app/main/default/objects/Web_Product__c/fields/Pack_Size_Grams__c.field-meta.xml
<CustomField>
    <fullName>Pack_Size_Grams__c</fullName>
    <label>Pack Size (Grams)</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>