force-app/main/default/objects/Web_Product__c/fields/Price_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Kg__c</fullName>
    <label>Price Per Kg</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>