force-app/main/default/objects/Web_Product__c/fields/Price_Per_Packet__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Packet__c</fullName>
    <formula>Price_Per_Kg__c * Pack_Size_Grams__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Packet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>